<resources>
    <!-- Titres -->
    <string name="app_name">Moyenne</string>
    <string name="title_activity_apropos">À propos</string>
    <string name="title_activity_consulter">Consulter</string>
    <string name="title_activity_gestion_donnees">Gestion des données</string>

    <!-- libellés -->
    <string name="a_propos">À propos</string>
    <string name="consulter">Consulter mes notes</string>
    <string name="gestion_donnees">Gestion des données</string>
    <string name="gestion_matieres">Gestion des matières</string>
    <string name="gestion_notes">Gestion des notes</string>
    <string name="action_settings">Réglages</string>
    <string name="action_fr">Français</string>
    <string name="action_en">Anglais</string>
    <string name="erreur_saisir_note_avant_moyenne">Vous devez saisir des notes afin de pouvoir consulter vos moyennes</string>
    <string name="construction">En construction</string>

    <!-- Consulter les matières -->
    <string name="matiere">Matiere</string>
    <string name="coefficient">Coefficient</string>
    <string name="moyenne">Moyenne</string>
    <string name="moyenne_generale">Moyenne générale</string>

    <!-- Gestion des matières -->
    <string name="ajout_matiere">Ajouter une matière</string>
    <string name="ajout_coefficient">Ajouter un coefficient</string>
    <string name="erreur_saisie_matiere">Vous devez saisir une matiere</string>
    <string name="erreur_saisie_coefficient">Vous devez saisir un coefficient</string>
    <string name="erreur_coefficient">Le coefficient doit être supérieur à 0</string>

    <!-- Gestion des notes -->
    <string name="erreur_saisie_note">Vous devez saisir une note</string>
    <string name="erreur_note">Vous devez saisir une note entre 0 et 20</string>

    <!-- Gestion des données -->
    <string name="erreur_saisie_note_avant_matiere">Vous devez saisir des matières avant de pouvoir saisir des notes</string>

    <!-- Common -->
    <string name="ajouter">Ajouter</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="effacer">Effacer</string>
    <string name="semestre_un">Semestre 1</string>
    <string name="semestre_deux">Semestre 2</string>
    <string name="retour">Retour</string>

    <string name="bienvenue">Bienvenue dans l\'application Moyenne, vous permettant de calculer vos moyennes de l\'année.</string>
    <string name="text_a_propos">
        \n\nCette application fut réalisée par l\'équipe 7 de l\'ESGI.\n
        \n
        Elle vous permettra de saisir, modifier, supprimer vos notes et vos moyennes, et les consulter.\n
        Vous pouvez de plus le faire par semestre.\n
        \n
        De nouvelles améliorations verront le jour prochainement.\n\n
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gestion_notes">Gestion des notes</string>
    <string name="title_activity_gestion_matieres">Gestion des matières</string>

</resources>
