<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <Button android:id="@+id/button_gestion_notes"
        android:text="@string/gestion_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#9697a2e7" />

    <Button android:id="@+id/button_gestion_matieres"
        android:text="@string/gestion_matieres"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#9697a2e7" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:id="@+id/button_retour_gestion_donnees"
        android:background="#9697a2e7" />

</LinearLayout>
